<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('users', function (Blueprint $table) {
            $table->id();

            // Data utama user
            $table->string('name');
            $table->string('email')->unique();
            $table->timestamp('email_verified_at')->nullable();
            $table->string('password');

            // Role user: super_admin, admin, dosen, mahasiswa
            $table->string('role')->default('mahasiswa');

            // Identitas tambahan
            $table->string('nim')->nullable()->unique();
            $table->string('nidn')->nullable()->unique();
            $table->string('phone')->nullable();

            // Fakultas, dibuat nullable agar tidak error jika tabel faculties dibuat setelah users
            $table->unsignedBigInteger('faculty_id')->nullable()->index();

            // Status akun
            $table->string('status')->default('pending');
            // pending, active, inactive, banned

            // Reputasi awal user
            $table->integer('reputation_points')->default(100);

            $table->rememberToken();
            $table->timestamps();
        });

        Schema::create('password_reset_tokens', function (Blueprint $table) {
            $table->string('email')->primary();
            $table->string('token');
            $table->timestamp('created_at')->nullable();
        });

        Schema::create('sessions', function (Blueprint $table) {
            $table->string('id')->primary();
            $table->foreignId('user_id')->nullable()->index();
            $table->string('ip_address', 45)->nullable();
            $table->text('user_agent')->nullable();
            $table->longText('payload');
            $table->integer('last_activity')->index();
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('sessions');
        Schema::dropIfExists('password_reset_tokens');
        Schema::dropIfExists('users');
    }
};
