<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    public function up(): void
    {
        Schema::create('facilities', function (Blueprint $table) {

            $table->id();

            $table->string('nama')->unique();

            $table->string('icon',10)->nullable();

            $table->string('kategori',50)->nullable();

            $table->text('deskripsi')->nullable();

            $table->timestamps();

        });
    }

    public function down(): void
    {
        Schema::dropIfExists('facilities');
    }
};