// ============================================================
//  SMART CLASSROOM BOOKING SYSTEM — FULL DATABASE DIAGRAM
//  Versi: Final (3 Role, 5 Actor)
// ============================================================

// ============================================================
//  TABEL UTAMA
// ============================================================

Table users {
  id bigint [pk, increment]
  name varchar(100) [not null]
  email varchar(150) [unique, not null]
  password varchar(255) [not null]

  // 3 Role Utama
  role varchar [not null, note: 'superadmin, admin, user']

  // 5 Actor (hanya untuk role = 'user')
  actor_type varchar [null, note: 'mahasiswa, dosen, organization']

  // Data spesifik berdasarkan actor_type
  nim_nip varchar(30) [null, note: 'Untuk mahasiswa & dosen']
  organization_name varchar(200) [null, note: 'Untuk organization']
  organization_singkatan varchar(30) [null]

  // Data umum
  phone varchar(20) [null]
  avatar varchar(255) [null]
  departemen varchar(100) [null]
  faculty_id bigint [null, note: 'FK ke faculties']

  // Reputasi
  reputation_point int [default: 100, note: 'Range 0-100, CHECK reputation_point BETWEEN 0 AND 100']
  reputation_level_id bigint [null, note: 'FK ke reputation_levels, di-update tiap reputation_point berubah']

  // Status Akun
  is_verified boolean [default: false]
  email_verified_at timestamp [null]
  account_status varchar [default: 'aktif', note: 'aktif, suspend, banned']

  // Sistem
  remember_token varchar(100) [null]
  last_reputation_change_at timestamp [null, note: 'Auto-update via trigger saat reputation_point berubah']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    email [unique]
    (role, actor_type)
    (role, account_status)
    faculty_id
  }
}

// ============================================================
//  TABEL FAKULTAS & ADMIN
// ============================================================

Table faculties {
  id bigint [pk, increment]
  nama varchar(100) [not null, unique]
  singkatan varchar(20) [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table admin_faculties {
  id bigint [pk, increment]
  admin_id bigint [not null, note: 'FK ke users.id (role = admin)']
  faculty_id bigint [not null, note: 'FK ke faculties.id']
  created_at timestamp [default: `now()`]

  indexes {
    (admin_id, faculty_id) [unique]
    admin_id
    faculty_id
  }
}

// ============================================================
//  TABEL RUANGAN & FASILITAS
// ============================================================

Table rooms {
  id bigint [pk, increment]
  kode varchar(20) [unique, not null]
  nama varchar(150) [not null]
  gedung varchar(100) [not null]
  lantai tinyint [not null]
  kapasitas smallint [not null]
  alamat varchar(255) [null]
  deskripsi text [null]
  foto varchar(255) [null]
  jam_buka time [not null]
  jam_tutup time [not null]
  max_durasi_jam tinyint [default: 4]
  status varchar [default: 'Tersedia', note: 'Tersedia, Maintenance']
  faculty_id bigint [null, note: 'FK ke faculties, untuk admin fakultas']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    kode [unique]
    faculty_id
    status
    (gedung, lantai)
  }
}

Table facilities {
  id bigint [pk, increment]
  nama varchar(100) [unique, not null]
  icon varchar(10) [null]
  kategori varchar(50) [null]
  deskripsi text [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    nama [unique]
  }
}

// Pivot rooms <-> facilities
Table room_facilities {
  id bigint [pk, increment]
  room_id bigint [not null]
  facility_id bigint [not null]
  status varchar [default: 'tersedia', note: 'tersedia, rusak, maintenance']
  updated_at timestamp [default: `now()`]

  indexes {
    (room_id, facility_id) [unique]
    room_id
    facility_id
    status
  }
}

// ============================================================
//  TABEL BOOKING
// ============================================================

Table bookings {
  id bigint [pk, increment]
  booking_code varchar(20) [unique, not null, note: 'Format: BK-XXXXX']
  user_id bigint [not null]
  room_id bigint [not null]

  // Detail Booking
  kegiatan varchar(150) [not null]
  tujuan text [not null]
  tanggal date [not null]
  jam_mulai time [not null]
  jam_selesai time [not null, note: 'Harus > jam_mulai, validasi di app/trigger']
  durasi_menit int [not null, note: 'Durasi dalam menit, dihitung otomatis']

  // Prioritas berdasarkan Jenis/Keperluan
  priority_level varchar [default: 'Medium', note: 'High, Medium-High, Medium, Low']

  // Status Booking
  status varchar [default: 'pending', note: 'pending, approved, rejected, completed, cancelled, no_show']
  catatan_admin text [null]
  disetujui_oleh bigint [null, note: 'FK ke users.id (admin/superadmin)']
  disetujui_at timestamp [null]

  // Check-in System
  check_in_status varchar [default: 'belum_checkin', note: 'belum_checkin, checkin_tepat_waktu, checkin_terlambat, no_show']
  check_in_at timestamp [null]
  checkin_deadline timestamp [null, note: 'Dihitung dari tanggal+jam_mulai+30 menit toleransi']

  // Penalty & Cancellation
  is_penalty_applied boolean [default: false]
  cancellation_reason varchar(255) [null, note: 'Wajib diisi di app layer jika status = cancelled/rejected']
  cancelled_by bigint [null, note: 'FK ke users.id, siapa yang membatalkan']

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    booking_code [unique]
    (room_id, tanggal, jam_mulai)
    (user_id, status)
    (status, created_at) [name: 'idx_bookings_status_created']
    (room_id, tanggal, status) [name: 'idx_bookings_room_date_status']
    (tanggal, status)
    (checkin_deadline, status) [name: 'idx_bookings_checkin_deadline']
    priority_level
  }
}

// ============================================================
//  RIWAYAT BOOKING (AUDIT TRAIL)
// ============================================================

Table booking_histories {
  id bigint [pk, increment]
  booking_id bigint [not null]
  user_id bigint [null, note: 'NULL jika perubahan dilakukan oleh sistem (cron/otomatis)']
  actor_type varchar [default: 'user', note: 'user, admin, system']
  status_sebelumnya varchar [null]
  status_baru varchar [not null]
  keterangan text [null, note: 'Wajib diisi di app layer jika status_baru = rejected']
  created_at timestamp [default: `now()`]

  indexes {
    booking_id
    (booking_id, created_at)
    user_id
    status_baru
    created_at
  }
}

// ============================================================
//  JADWAL RUANGAN (NON-BOOKING)
// ============================================================

Table room_schedules {
  id bigint [pk, increment]
  room_id bigint [not null]
  booking_id bigint [null, note: 'Nullable, ON DELETE SET NULL. NULL = jadwal non-booking']
  label varchar(200) [not null]
  tanggal date [not null]
  waktu_mulai time [not null]
  waktu_selesai time [not null]
  jenis_jadwal varchar [default: 'booking', note: 'booking, maintenance, academic_schedule, private_event']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (room_id, tanggal) [name: 'room_schedules_room_tanggal_index']
    (room_id, tanggal, waktu_mulai)
    booking_id
    jenis_jadwal
  }
}

// ============================================================
//  SISTEM REPUTASI
// ============================================================

Table reputation_settings {
  id bigint [pk, increment]
  kode varchar(50) [unique, not null, note: 'checkin_tepat_waktu, no_show, pembatalan_mendadak, dsb']
  nama varchar(100) [not null]
  perubahan_point int [not null, note: 'Nilai perubahan point (+/-)']
  is_active boolean [default: true]
  deskripsi text [null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    kode [unique]
    is_active
  }
}

Table reputation_levels {
  id bigint [pk, increment]
  nama_level varchar(50) [not null, note: 'Suspended, Dibatasi, Normal, Prioritas Tinggi']
  min_point int [not null]
  max_point int [not null]
  boleh_booking boolean [default: true]
  max_durasi_booking_jam int [null, note: 'NULL = ikuti max_durasi_jam ruangan']
  max_booking_per_hari int [null, note: 'NULL = tidak dibatasi']
  prioritas tinyint [default: 0, note: '0=normal, 1=prioritas, -1=diblokir']
  warna varchar(20) [default: 'gray']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (min_point, max_point) [name: 'reputation_levels_point_range_index']
  }
}

Table reputation_logs {
  id bigint [pk, increment]
  user_id bigint [not null]
  booking_id bigint [null, note: 'Nullable, terkait booking tertentu']
  setting_id bigint [not null, note: 'FK ke reputation_settings.id']
  perubahan int [not null, note: 'Positif (+10, +5) atau negatif (-15, -20)']
  point_sebelum int [not null]
  point_sesudah int [not null]
  deskripsi text [null]
  created_at timestamp [default: `now()`]

  indexes {
    user_id [name: 'reputation_logs_user_id_index']
    booking_id [name: 'reputation_logs_booking_id_index']
    created_at [name: 'reputation_logs_created_at_index']
    (user_id, created_at) [name: 'reputation_logs_user_created_index']
    setting_id
  }
}

// ============================================================
//  PEMBATALAN BOOKING (ANALITIK)
// ============================================================

Table booking_cancellations {
  id bigint [pk, increment]
  booking_id bigint [not null]
  cancelled_by bigint [not null, note: 'FK ke users.id']
  actor_type varchar [default: 'user', note: 'user, admin, system']
  alasan text [not null]
  kena_penalti boolean [default: false]
  penalti_point int [default: 0, note: 'Jumlah poin yang dikurangi akibat pembatalan']
  created_at timestamp [default: `now()`]

  indexes {
    booking_id
    cancelled_by
    created_at
    (booking_id, created_at)
  }
}

// ============================================================
//  NOTIFIKASI & RIWAYAT
// ============================================================

Table notifikasi {
  id bigint [pk, increment]
  user_id bigint [not null]
  judul varchar(255) [not null]
  pesan text [null]
  tipe varchar [default: 'info', note: 'info, warning, success, approval']
  status varchar [default: 'belum_dibaca', note: 'belum_dibaca, sudah_dibaca']
  entitas_terkait varchar [null, note: 'ENUM di app: bookings, organizations, users, rooms']
  entitas_id varchar [null, note: 'Selalu disimpan sebagai string. Integer ID dikonversi eksplisit saat insert']
  created_at timestamp [default: `now()`]
  dibaca_at timestamp [null]

  indexes {
    user_id
    status
    created_at
    (user_id, status)
    (user_id, created_at)
  }
}

Table riwayat {
  id bigint [pk, increment]
  user_id bigint [not null]
  jenis_aktivitas varchar [not null, note: 'peminjaman_ruangan, update_profil, checkin, pembatalan, dsb']
  deskripsi text [null]
  entitas_terkait varchar [null, note: 'ENUM di app: bookings, users, rooms']
  entitas_id varchar [null, note: 'Selalu disimpan sebagai string. Integer ID dikonversi eksplisit saat insert']
  created_at timestamp [default: `now()`]

  indexes {
    user_id
    created_at
    (user_id, created_at)
    jenis_aktivitas
  }
}

// ============================================================
//  RELASI (FOREIGN KEY)
// ============================================================

// Users
Ref: users.reputation_level_id > reputation_levels.id
Ref: users.faculty_id > faculties.id

// Admin Faculties
Ref: admin_faculties.admin_id > users.id
Ref: admin_faculties.faculty_id > faculties.id

// Rooms
Ref: rooms.faculty_id > faculties.id

// Room Facilities (Pivot)
Ref: room_facilities.room_id > rooms.id
Ref: room_facilities.facility_id > facilities.id

// Bookings
Ref: bookings.user_id > users.id
Ref: bookings.room_id > rooms.id
Ref: bookings.disetujui_oleh > users.id
Ref: bookings.cancelled_by > users.id

// Booking Histories
Ref: booking_histories.booking_id > bookings.id
Ref: booking_histories.user_id > users.id

// Room Schedules
Ref: room_schedules.room_id > rooms.id
Ref: room_schedules.booking_id > bookings.id [delete: set null]

// Reputation Logs
Ref: reputation_logs.user_id > users.id
Ref: reputation_logs.booking_id > bookings.id
Ref: reputation_logs.setting_id > reputation_settings.id

// Booking Cancellations
Ref: booking_cancellations.booking_id > bookings.id
Ref: booking_cancellations.cancelled_by > users.id

// Notifications & History
Ref: notifikasi.user_id > users.id
Ref: riwayat.user_id > users.id
